# argos3-builderbot

./: README.md
src/: CMakeLists.txt  LICENSE
src/cmake/: ARGoSBuildChecks.cmake  ARGoSBuildOptions.cmake
src/plugins/robots/: CMakeLists.txt
src/plugins/robots/builderbot/: CMakeLists.txt
src/plugins/robots/builderbot/hardware/: actuator.h  builderbot_camera_system_default_sensor.h  builderbot_differential_drive_default_actuator.cpp  builderbot_differential_drive_default_actuator.h  builderbot_differential_drive_default_sensor.cpp  builderbot_differential_drive_default_sensor.h  builderbot_electromagnet_system_default_actuator.cpp  builderbot_electromagnet_system_default_actuator.h  builderbot_electromagnet_system_default_sensor.cpp  builderbot_electromagnet_system_default_sensor.h  builderbot_leds_default_actuator.cpp  builderbot_leds_default_actuator.h  builderbot_lift_system_default_actuator.cpp  builderbot_lift_system_default_actuator.h  builderbot_lift_system_default_sensor.cpp  builderbot_lift_system_default_sensor.h  builderbot_rangefinders_default_sensor.cpp  builderbot_rangefinders_default_sensor.h  builderbot_system_default_sensor.h  main.cpp  robot.cpp  robot.h  sensor.h  simple_radios_default_actuator.cpp  simple_radios_default_actuator.h  simple_radios_default_sensor.cpp  simple_radios_default_sensor.h
src/testing/: CMakeLists.txt  test_camera_system.argos.in  test_differential_drive.argos.in  test_electromagnet_system.argos.in  test_leds.argos.in  test_leds.lua  test_lift_system.argos.in  test_rangefinders.argos.in  test_system.argos.in
